Fixed overflow

--- a/lydia-website/src/components/Updates/main.scss
+++ b/lydia-website/src/components/Updates/main.scss
@@ -11,7 +11,7 @@
 
     .updates-container-statuses {
         max-height: 80%;
-        overflow-y: auto;
+        overflow: hidden auto;
 
         &::-webkit-scrollbar {
             border-radius: 3px;
